wallets texts for dark mode css fix

--- a/styles/components/signForm.scss
+++ b/styles/components/signForm.scss
@@ -111,7 +111,7 @@
         .signin-app-name {
           font-size: 12px;
           font-weight: 600;
-          color: var(--text-main);
+          color: #000;
           line-height: 1;
           white-space: nowrap;
 
